theme.css
/* ... */
select:hover,
.setting-item-control select:hover {
  border: none;
  background: var(--theme-color-controlBgHover);
  color: var(--theme-color-controlTextHover);
}
select:focus,
.dropdown:focus {
    box-shadow: 0 0 0 3px var(--background-modifier-border-focus);
    outline: none;
}

/* Selects – lower visual weight */
.search-results-info .dropdown {
  border: none;
  box-shadow: var(--theme-shadow-control);
  background-color: var(--theme-color-controlBgLowWeight);
}
.search-results-info .dropdown:hover {
  border: none;
  background: var(--theme-color-controlBgHover);
  color: var(--theme-color-controlTextHover);
}
.search-results-info .dropdown:focus {
    box-shadow: 0 0 0 3px var(--background-modifier-border-focus);
    outline: none;
}


/* Multi-select pill */
.multi-select-container,
.metadata-property .multi-select-container {
  padding: 0.25em;
}
.multi-select-pill {
  padding: var(--pill-padding-y) var(--pill-padding-x);
}
.multi-select-pill-remove-button {
  margin: 0;
  border-radius: 100%;
}
.multi-select-pill-remove-button:hover {
  background: var(--pill-background-remove-hover);
}

/* Toolbars */
.canvas-controls,
.graph-controls,
.graph-controls.is-close,
.graph-controls:not(.is-close),
.canvas-card-menu,
.canvas-menu,
.canvas-submenu {
  background: var(--controls-container-background);
  border: none;
  padding: 0.25rem;
  gap: 0;
  box-shadow: var(--theme-shadow-input);
  border-radius: 0.5rem;
}
.canvas-control-item,
.graph-controls-button,
.canvas-card-menu .canvas-card-menu-button {
  --icon-size: var(--icon-s);
  --icon-stroke: var(--icon-s-stroke-width);
  border-radius: var(--clickable-icon-radius);
  color: var(--color-text-interactive);
  opacity: var(--icon-opacity);
  background-color: transparent;
  border: none;
}
.canvas-control-item:hover,
.graph-controls-button:not(.mod-close):hover,
.canvas-card-menu .canvas-card-menu-button:hover {
  color: var(--color-text-interactive-hover);
  background-color: var(--background-modifier-hover);
}

/* Collapsible controls */
.metadata-properties-heading,
.embedded-backlinks .backlink-pane .tree-item-self,
.graph-controls .mod-collapsible,
.mod-collapsible,
.search-result-file-title {
  align-items: flex-start;
  border-radius: var(--radius-s);
  color: var(--text-faint);
  font-size: var(--nav-item-size);
  font-weight: var(--font-medium);
  gap: 0;
  margin: 0;
  padding: 0.25em 0.5em;
  line-height: var(--line-height-tight);
  display: flex;
}
.metadata-properties-heading:hover,
.embedded-backlinks .backlink-pane .tree-item-self:hover,
.graph-controls .mod-collapsible:hover,
.mod-collapsible:hover,
.search-result-file-title:hover {
  color: var(--nav-item-color-hover);
  background-color: var(--nav-item-background-hover);
  font-weight: var(--font-medium);
}
.metadata-properties-heading .collapse-indicator,
.embedded-backlinks .backlink-pane .tree-item-self .collapse-icon,
.graph-controls .mod-collapsible .collapse-icon,
.tree-item-self .tree-item-icon.collapse-icon {
  color: var(--color-text-interactive);
  display: flex;
  left: inherit;
  opacity: var(--icon-opacity);
  padding: 0;
  position: relative;
  width: var(--size-4-4);
  margin: 0;
}
.metadata-properties-heading:hover .collapse-indicator svg.svg-icon,
.embedded-backlinks .backlink-pane .tree-item-self:hover .collapse-icon svg.svg-icon,
.graph-controls .mod-collapsible:hover .collapse-icon svg.svg-icon,
.mod-collapsible:hover .collapse-icon svg.svg-icon,
.search-result-file-title:hover .collapse-icon svg.svg-icon,
.tree-item-self:hover .tree-item-icon.collapse-icon svg.svg-icon,
.tree-item-self:hover .menu-item-icon svg.svg-icon {
  color: var(--color-text-interactive-hover);
}
.backlink-pane > .tree-item-self .collapse-icon,
.outgoing-link-pane > .tree-item-self .collapse-icon {
  display: block;
  margin-left: 0;
  position: relative;
}
.metadata-properties-heading .collapse-indicator svg,
.embedded-backlinks .backlink-pane .tree-item-self .tree-item-icon svg,
.graph-controls .mod-collapsible .collapse-icon svg {
  color: var(--color-text-interactive);
}
.metadata-content,
.embedded-backlinks .backlink-pane .search-result-container,
.graph-control-section .tree-item-children {
  margin: 0 1em 1em 1em;
  font-size: var(--font-ui-small);
}

/********* Item lists *********/
body:not(.is-grabbing) .tree-item-self.is-clickable:hover,
.horizontal-tab-nav-item:hover,
.vertical-tab-nav-item:hover {
  color: var(--nav-item-color-hover);
  background-color: var(--nav-item-background-hover);
  font-weight: var(--nav-item-weight-hover);
}
.horizontal-tab-nav-item.is-active,
.vertical-tab-nav-item.is-active,
.nav-file-title.is-active,
.nav-folder-title.is-active {
  background-color: var(--interactive-accent);
  color: var(--nav-item-color-active);
}
body:not(.is-grabbing) .tree-item.nav-file .tree-item-self.is-active:hover,
.horizontal-tab-nav-item.is-active:hover,
.vertical-tab-nav-item.is-active:hover,
.nav-file-title.is-active:hover,
.nav-folder-title.is-active:hover {
  background-color: var(--interactive-accent);
  color: var(--nav-item-color-active);
}
.nav-folder-title {
  font-weight: var(--font-medium);
}


/* UI Checkboxes */
.checkbox-container {
  background-color: var(--background-input);
}
.checkbox-container.is-enabled {
    background-color: var(--interactive-accent);
}
input[type=checkbox]:checked:after {
  /* Scale check mark with container in slides */
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
}

/********** Remote items **********/

.community-modal-search-results-wrapper,
.vault-list,
.sync-file-tree-container {
  background: var(--theme-gradient-topToBottom);
  border: 0;
  padding: 1.5em;
  gap: 1.5em;
}
.is-phone .community-modal-search-results-wrapper {
  padding: 1em;
  gap: 1em;
}
/* ... */

